@@ -252,11 +252,11 @@ public class Analyser implements NodeVisitor {
 	}
 
 	public void visit(PrimaryExpression primaryExpression) {
-		// System.out.println("TODO PrimaryExpression() " + primaryExpression);
+//		System.out.println("TODO PrimaryExpression() " + primaryExpression);
 	}
 
 	public void visit(PrimaryStatements primaryStatements) {
-		// System.out.println("TODO PrimaryStatements() " + primaryStatements);
+		System.out.println("TODO PrimaryStatements() " + primaryStatements);
 	}
 
 	public void visit(Primitive primitive, String value, int line) {
@@ -264,27 +264,22 @@ public class Analyser implements NodeVisitor {
 	}
 
 	public void visit(Symbol symbol, String value, int line) {
-		System.out.println("TODO Symbol() " + value);
+//		System.out.println("TODO Symbol() " + value);
+		classBytecodeWriter.callPrimitiveSymbol(value, line);
+		if (insideArray())
+			classBytecodeWriter.callPrimitivePutAt(symbol.index(), line);
 	}
 
 	public void visit(Array array) {
-		System.out.println("Array() begin " + array.index());
 		arrayDepth++;
 		classBytecodeWriter.callPrimitiveArray(array.size(), array.line());
 	}
 
 	public void visitEnd(Array array) {
-		System.out.println("Array() end");
 		arrayDepth--;
 		if (insideArray())
-			classBytecodeWriter.keywordSend("add:", 1, array.line(), false);
+			classBytecodeWriter.callPrimitivePutAt(array.index(), array.line());
 	}
-
-// 	:	numberConstant {$n = $numberConstant.n;}
-//	|	characterConstant {$n = $characterConstant.n;}
-//	|	stringConstant {$n = $stringConstant.n;}
-//	|	symbol {$n = $symbol.n;}
-//	|	array {$n = $array.n;}
 
 	private boolean insideArray() {
 		return arrayDepth != 0;
@@ -295,6 +290,7 @@ public class Analyser implements NodeVisitor {
 	}
 
 	public void visit(LiteralSymbol literalSymbol, String value, int line) {
+//		System.out.println("LiteralSymbol() " + value);
 		classBytecodeWriter.callPrimitiveSymbol(value, line);
 	}
 
@@ -312,11 +308,20 @@ public class Analyser implements NodeVisitor {
 	}
 
 	public void visit(CharacterConstant characterConstant, String value, int line) {
-		// System.out.println("TODO CharacterConstant() " + characterConstant);
+//		System.out.println("CharacterConstant() " + value);
+		classBytecodeWriter.callPrimitiveCharacter(value.substring(1), line);
+		if (insideArray())
+			classBytecodeWriter.callPrimitivePutAt(characterConstant.index(), line);
 	}
 
 	public void visit(StringConstant stringConstant, String value, int line) {
-//		System.out.println("TODO StringConstant() " + value);
+//		System.out.println("StringConstant() " + value + " at: " + stringConstant.index());
+		if (value.charAt(0) == '\'')
+			classBytecodeWriter.callPrimitiveString(value.substring(1, value.length() - 1), line);
+		else
+			classBytecodeWriter.callPrimitiveString(value, line);
+		if (insideArray())
+			classBytecodeWriter.callPrimitivePutAt(stringConstant.index(), line);
 	}
 
 	public void visit(StringChunk stringChunk, String value, int line) {
@@ -324,6 +329,7 @@ public class Analyser implements NodeVisitor {
 	}
 
 	public void visit(LiteralString literalString, String value, int line) {
+//		System.out.println("LiteralString() " + value);
 		if (value.charAt(0) == '\'')
 			classBytecodeWriter.callPrimitiveString(value.substring(1, value.length() - 1), line);
 		else
@@ -335,14 +341,11 @@ public class Analyser implements NodeVisitor {
 	}
 
 	public void visit(NumberConstant numberConstant, String value, int line) {
-		System.out.println("NumberConstant() " + value + " at: " + numberConstant.index());
+//		System.out.println("NumberConstant() " + value + " at: " + numberConstant.index());
 		// NumberConstants happen within an array context.
 		if (insideArray()) {
-			classBytecodeWriter.stackDuplicate();
-			classBytecodeWriter.callPrimitiveInteger(numberConstant.index(), line); // at:
 			classBytecodeWriter.callPrimitiveInteger(numberConstant.value(), line); // put:
-			classBytecodeWriter.keywordSend("at:put", 2, line, false);
-			classBytecodeWriter.stackPop(); // at:put: returns value we put, so remove it.
+			classBytecodeWriter.callPrimitivePutAt(numberConstant.index(), line);   // at:
 		} else {
 			classBytecodeWriter.callPrimitiveInteger(numberConstant.value(), line);
 		}
