@@ -1,6 +1,7 @@
 
-| temp |
-temp := #(1 ('one' 1) 2 3).
-Transcript show: temp; cr; cr.
+| temp1 temp2 |
+temp1 := #(1 ('one' 1) 'hello world' symbol $f 3).
+temp2 := temp1 at: 3.
+Transcript show: temp2; cr; cr.
 
 
